# frisp

./: .gitlab-ci.yml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
libfrisp/: Cargo.toml
libfrisp/src/: ast.rs  frisp_test.rs  functions.rs  lib.rs  token.rs  value.rs
libfrisp/src/env/: arithmetic.rs  io.rs  list.rs  logical.rs  misc.rs  mod.rs  string.rs
res/: abs.lisp  conc.lisp  fib.lisp  gcd.lisp  gcd_ui.lisp  include_test.lisp  lcm.lisp  list_util.lisp  reduce.lisp  rev.lisp  seq.lisp  sum.lisp
res/test/: list_util.test.lisp  string.test.lisp
