[package]
name = "cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "frisp"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
glob = "0.3.1"
libfrisp = { path = "../libfrisp" }
